--- a/SadAgregator/View/cells/VendorRatingCell/VendorRatingTableViewCell.xib
+++ b/SadAgregator/View/cells/VendorRatingCell/VendorRatingTableViewCell.xib
@@ -10,11 +10,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="149" id="KGk-i7-Jjw" customClass="VendorRatingTableViewCell" customModule="SadAgregator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="306" height="149"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="127" id="KGk-i7-Jjw" customClass="VendorRatingTableViewCell" customModule="SadAgregator" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="306" height="127"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="306" height="149"/>
+                <rect key="frame" x="0.0" y="0.0" width="306" height="127"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="6hz-6C-Vkj">
@@ -61,7 +61,7 @@
                         </subviews>
                     </stackView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n6O-qj-Ni4">
-                        <rect key="frame" x="0.0" y="148" width="306" height="1"/>
+                        <rect key="frame" x="0.0" y="126" width="306" height="1"/>
                         <color key="backgroundColor" red="0.86005309129999996" green="0.86005309129999996" blue="0.86005309129999996" alpha="0.77310756660000002" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="QZQ-Ck-Nk2"/>
@@ -70,17 +70,17 @@
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="7LF-vu-72X">
                         <rect key="frame" x="16" y="19" width="274" height="16"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CN5-8L-WIW">
-                                <rect key="frame" x="0.0" y="0.0" width="44.5" height="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CN5-8L-WIW">
+                                <rect key="frame" x="0.0" y="0.0" width="25" height="16"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="44.5" id="xS3-qA-iOZ"/>
+                                    <constraint firstAttribute="width" constant="25" id="xS3-qA-iOZ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ольга Высоцкая" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7MB-ph-eUI">
-                                <rect key="frame" x="60.5" y="0.0" width="117.5" height="16"/>
+                                <rect key="frame" x="41" y="0.0" width="137" height="16"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -97,11 +97,11 @@
                         </subviews>
                     </stackView>
                     <tableView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ed0-4L-15q">
-                        <rect key="frame" x="16" y="43" width="200.5" height="73"/>
+                        <rect key="frame" x="16" y="43" width="200.5" height="51"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tableView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kot-vY-Zfz">
-                        <rect key="frame" x="8" y="124" width="282" height="16"/>
+                        <rect key="frame" x="8" y="102" width="282" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -132,12 +132,12 @@
                 <outlet property="nameLabel" destination="7MB-ph-eUI" id="3SJ-9j-45O"/>
                 <outlet property="peoplesImageView" destination="Eo4-aD-d7S" id="31Z-Xr-xKl"/>
                 <outlet property="peoplesLabel" destination="yZO-o1-lH3" id="OAN-KI-czG"/>
-                <outlet property="posLabel" destination="7LF-vu-72X" id="iH2-k6-K6h"/>
+                <outlet property="posLabel" destination="CN5-8L-WIW" id="O5U-Ab-YtS"/>
                 <outlet property="revImageView" destination="Llc-K2-j2j" id="UZI-hc-2HO"/>
                 <outlet property="revLabel" destination="HxS-20-Dlb" id="lcp-Mr-TwX"/>
                 <outlet property="tableView" destination="Ed0-4L-15q" id="Ufx-J7-Jdq"/>
             </connections>
-            <point key="canvasLocation" x="50.724637681159422" y="137.61160714285714"/>
+            <point key="canvasLocation" x="50.724637681159422" y="130.24553571428572"/>
         </tableViewCell>
     </objects>
     <resources>
