--- a/SadAgregator/View/cells/VendorRatingCell/PricesTableViewCell/PricesTableViewCell.xib
+++ b/SadAgregator/View/cells/VendorRatingCell/PricesTableViewCell/PricesTableViewCell.xib
@@ -10,22 +10,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="33" id="KGk-i7-Jjw" customClass="PricesTableViewCell" customModule="SadAgregator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="33"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="45" id="KGk-i7-Jjw" customClass="PricesTableViewCell" customModule="SadAgregator" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="33"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="money" translatesAutoresizingMaskIntoConstraints="NO" id="Fv7-5S-UgS">
-                        <rect key="frame" x="0.0" y="0.0" width="27" height="27"/>
+                        <rect key="frame" x="0.0" y="8" width="27" height="27"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="27" id="LEw-xc-HGe"/>
                             <constraint firstAttribute="height" constant="27" id="yzW-hG-gzc"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="q5Z-jo-Pg3">
-                        <rect key="frame" x="35" y="4.5" width="277" height="18"/>
+                        <rect key="frame" x="35" y="12.5" width="277" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="Gbc-Bw-MHT"/>
                         </constraints>
@@ -35,7 +35,7 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Fv7-5S-UgS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Dkk-ST-Yet"/>
+                    <constraint firstItem="Fv7-5S-UgS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Dkk-ST-Yet"/>
                     <constraint firstAttribute="trailing" secondItem="q5Z-jo-Pg3" secondAttribute="trailing" constant="8" id="Fml-WN-f41"/>
                     <constraint firstItem="Fv7-5S-UgS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="HrX-67-3dB"/>
                     <constraint firstAttribute="bottom" secondItem="Fv7-5S-UgS" secondAttribute="bottom" id="gtF-oB-IMl"/>
@@ -48,7 +48,7 @@
                 <outlet property="label" destination="q5Z-jo-Pg3" id="39y-IZ-35u"/>
                 <outlet property="moneyImageView" destination="Fv7-5S-UgS" id="TGJ-R8-UkC"/>
             </connections>
-            <point key="canvasLocation" x="63.768115942028992" y="100.11160714285714"/>
+            <point key="canvasLocation" x="63.768115942028992" y="104.12946428571428"/>
         </tableViewCell>
     </objects>
     <resources>
